--- a/SchoolDiary/SchoolDiary.WEB/appsettings.json
+++ b/SchoolDiary/SchoolDiary.WEB/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "SchoolDiary": "Server=(localdb)\\mssqllocaldb;Database=SchoolDiary;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
