--- a/SchoolDiary/SchoolDiary.WEB/appsettings.json
+++ b/SchoolDiary/SchoolDiary.WEB/appsettings.json
@@ -9,9 +9,16 @@
     "SchoolDiary": "Server=(localdb)\\mssqllocaldb;Database=SchoolDiary;Trusted_Connection=True;"
   },
   "Jwt": {
-    "Key": "0d83b002-d000-4970-eeb4-2f605c89de7b", // At least 32 characters long
+    "Key": "0d83b002-d000-4970-eeb4-2f605c89de7b",
     "Issuer": "http://localhost:5203",
     "Audience": "http://localhost:5203"
+  },
+  "NotificationMetadata": {
+    "Sender": "andriykuklinov@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "Username": "andriykuklinov",
+    "Password": "zrud eqgh mnve aeel"
   },
   "AllowedHosts": "*"
 }
