--- a/SchoolDiary/schooldiary.client/package.json
+++ b/SchoolDiary/schooldiary.client/package.json
@@ -8,8 +8,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
+    "css-loader": "^7.1.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1",
+    "style-loader": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
