--- a/SchoolDiary/schooldiary.client/package.json
+++ b/SchoolDiary/schooldiary.client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "css-loader": "^7.1.2",
+    "file-loader": "^6.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
