--- a/SchoolDiary/schooldiary.client/package.json
+++ b/SchoolDiary/schooldiary.client/package.json
@@ -13,6 +13,7 @@
     "file-loader": "^6.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "style-loader": "^4.0.0"
   },
