--- a/SchoolDiary/SchoolDiary.WEB/appsettings.json
+++ b/SchoolDiary/SchoolDiary.WEB/appsettings.json
@@ -20,5 +20,6 @@
     "Username": "andriykuklinov",
     "Password": "zrud eqgh mnve aeel"
   },
+  "ClientOrigin": "http://localhost:8081",
   "AllowedHosts": "*"
 }
