--- a/SchoolDiary/schooldiary.client/package.json
+++ b/SchoolDiary/schooldiary.client/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.3",
     "css-loader": "^7.1.2",
     "file-loader": "^6.2.0",
+    "history": "^5.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
